IndividualCard now requires Auth, and author names in gallery no longer overflow

--- a/src/Pages/css/gallery.module.css
+++ b/src/Pages/css/gallery.module.css
@@ -268,5 +268,10 @@ input[type="checkbox"]:checked {
 
 .research-author-name {
   color: var(--primary);
-  font-size: 1rem;
+  font-size: 0.875rem;
+  font-style: italic;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin-right: 10px;
 }
